tests/compose_backend_fail/unknown_method.stderr
error: unknown Canvas method `fil_path` — did you mean `fill_path`?
  --> tests/compose_backend_fail/unknown_method.rs:24:9
   |
24 |         fil_path => sw,
   |         ^^^^^^^^
